--- a/src/scss/commons.scss
+++ b/src/scss/commons.scss
@@ -313,3 +313,15 @@ header {
     }
   }
 }
+
+// footer 页脚部分
+.footer {
+  height: 496px;
+  display: block;
+  overflow: hidden;
+  line-height: 22px;
+  padding-top: 0;
+  border-top: 1px solid #ebebeb;
+  background-color: #fcfcfc;
+  color: #4d4d4d;
+}
