--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -697,3 +697,19 @@ nav .more {
     margin-right: 3px;
   }
 }
+.shop-sort-ft {
+  border-top: 1px solid #e8e8e8;
+  a{
+    width: 324px;
+    display: block;
+    color: #fff;
+    height: 44px;
+    background-color: #f10180;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    font-size: 16px;
+    text-align: center;
+    line-height: 44px;
+    margin: -1px auto 20px;
+  }
+}
