--- a/src/scss/commons.scss
+++ b/src/scss/commons.scss
@@ -268,6 +268,7 @@ header {
 .area {
   float: left;
   position: relative;
+  padding-left: 15px;
   font-size: 12px;
   color: #333333;
 }
@@ -614,7 +615,7 @@ header {
   }
   .search-btn {
     width: 53px;
-    height: 38px;
+    height: 36px;
     background: #fa2a83;
     float: right;
     text-align: center;
