--- a/src/scss/cars.scss
+++ b/src/scss/cars.scss
@@ -314,6 +314,42 @@
               display: block;
               overflow: hidden;
             }
+            .product-pic-preview-tooltips {
+              top: 0;
+              left: 67px;
+              width: 194px;
+              height: 244px;
+            }
+            .ui-tooltips {
+              display: none;
+              visibility: visible;
+              opacity: 0;
+              transition: transform ease-out 0.15s, opacity ease-out 0.15s;
+              position: absolute;
+              max-width: 800px;
+              border: 1px solid #dbdada;
+              border-radius: 2px;
+              box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+              font-size: 12px;
+              line-height: 18px;
+              color: #4d4d4d;
+              z-index: 50;
+              .ui-tooltips-content {
+                padding: 5px;
+                position: relative;
+                background: #fff;
+                img {
+                  display: block;
+                  overflow: hidden;
+                }
+              }
+            }
+            // 当图片放入是显示图片
+            .product-tooltips-show {
+              visibility: visible;
+              opacity: 1;
+              display: block;
+            }
           }
           .product-title {
             width: 180px;
@@ -467,6 +503,7 @@
         .dellCarBtn {
           display: inline-block;
           margin-top: 8px;
+          margin-left: 26px;
           &:hover {
             color: inherit;
           }
